Fixing the light and dark mode problem

--- a/portfolio/src/app/globals.css
+++ b/portfolio/src/app/globals.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+    --background: #0a0a0a;
+    --foreground: #ededed;
 }
 
 @layer base {
@@ -16,13 +16,6 @@
   }
   h3 {
     @apply text-[30px] font-semibold;
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
   }
 }
 
